<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/empty_tall_divider"
    android:orientation="vertical"
    android:padding="8dp"
    android:showDividers="middle"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/text_bin"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="0000 0000"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_scheme"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/scheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Visa"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_brand"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Visa/Dankort"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_card_number"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_length"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/number_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="16"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_luhn"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/number_luhn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Yes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_type"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Debit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_prepaid"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/prepaid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_country"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/country_alpha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="DK"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="Denmark"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_latitude"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/country_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="56"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_longitude"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/country_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="10"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_bank"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:gravity="right"
            android:text="Jyske Bank, "
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/bank_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="Hjørring"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/bank_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:focusable="true"
        android:linksClickable="true"
        android:text="www.jyskebank.dk"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/bank_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="+4589893300"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ok" />


</LinearLayout>